Added roots endpoint
