# routes/api.js
@@ -6,6 +6,7 @@ const {
   getWithTashkeel,
   getSuraDetails,
   getScraper,
+  getRoots,
 } = require("../controllers/QuranController");
 
 router.get("/api/quran-model", getQuranModel);
@@ -13,5 +14,6 @@ router.get("/api/quran-index", getQuranIndex);
 router.get("/api/with-tashkeel", getWithTashkeel);
 router.get("/api/view/sura-details/:fileName", getSuraDetails);
 router.get(`/api/scrape/:word`, getScraper);
+router.get("/api/roots", getRoots);
 
 module.exports = router;
